name:                mf2
version:             0.1.0.0
-- synopsis:
-- description:
author:              Christopher James Willcock 
maintainer:          cjwillcock@ieee.org
copyright:           2019 Christopher James Willcock
category:            cli
build-type:          Simple
cabal-version:       >=1.10

executable mf2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       microformats2-parser,
                       data-default,
                       network-uri,
                       bytestring

executable mf2-json
  hs-source-dirs:      src
  main-is:             JSON.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       microformats2-parser,
                       data-default,
                       network-uri,
                       bytestring,
                       aeson

executable preflight-check
  hs-source-dirs:      src
  main-is:             PreflightCheck.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       microformats2-parser

